# resume-analyzer-api

./: .gitignore  README.md  ats_scoring.py  build.sh  lie_detector.py  main.py  pyproject.toml  requirements.txt
resume_analsys/: ats_scoring.py  profile_extractor.py
resume_analysis/: ai_analsys.py  ai_analysis.py  lie_detector.py
