[project]
name = "resume-analyzer-api"
version = "0.1.0"
description = ""
authors = [
    {name = "NaveedAslam205", email = "128507574+NaveedAslam205@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"

dependencies = [
    python = ">=3.9,<3.12"
    spacy = "^3.8.7"
    fastapi = "^0.116.1"
    uvicorn = "^0.35.0"
    sentence-transformers = "^5.0.0"
    scipy = "^1.10"
    transformers = "^4.53.2"
    sentencepiece = "^0.1.99"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
