[project]
name = "resume-analyzer-api"
version = "0.1.0"
description = ""
authors = [
    { name = "NaveedAslam205", email = "128507574+NaveedAslam205@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
package-mode = false

dependencies = [
    "spacy>=3.8.7,<4.0.0",
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn>=0.35.0,<0.36.0",
    "sentence-transformers>=5.0.0,<6.0.0",
    "scipy>=1.10,<1.11",
    "transformers>=4.53.2,<5.0.0",
    "sentencepiece>=0.1.99,<0.2.0",
    "PyMuPDF>=1.24.1,<2.0.0",
    "python-multipart>=0.0.9,<0.1.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
